GHA: Update workflow triggers

--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -2,12 +2,10 @@ name: Benchmark Collection
 on:
   push:
     branches:
-      - develop
-      - master
+      - main
   pull_request:
     branches:
-      - master
-      - develop
+      - main
   merge_group:
   workflow_dispatch:
   schedule:
