--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -2,9 +2,7 @@ name: Deploy Protected
 on:
   push:
     branches:
-      - master
-      - develop
-      - release**
+      - main
   pull_request:
     paths:
       - container/Dockerfile
