--- a/.github/workflows/test_doc.yml
+++ b/.github/workflows/test_doc.yml
@@ -2,12 +2,10 @@ name: Documentation Tests
 on:
   push:
     branches:
-      - develop
-      - master
+      - main
   pull_request:
     branches:
-      - develop
-      - master
+      - main
   merge_group:
   workflow_dispatch:
   schedule:
