--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -2,12 +2,10 @@ name: PEtab
 on:
   push:
     branches:
-      - develop
-      - master
+      - main
   pull_request:
     branches:
-      - master
-      - develop
+      - main
   merge_group:
   workflow_dispatch:
 
