--- a/.github/workflows/test_valgrind.yml
+++ b/.github/workflows/test_valgrind.yml
@@ -2,11 +2,10 @@ name: Valgrind tests
 on:
   push:
     branches:
-      - master
       - update_valgrind_supp
   pull_request:
     branches:
-      - master
+      - update_valgrind_supp
   workflow_dispatch:
   schedule:
     - cron:  '48 4 * * *'
