--- a/.github/workflows/test_performance.yml
+++ b/.github/workflows/test_performance.yml
@@ -1,13 +1,6 @@
 name: Performance Test
 on:
-  push:
-    branches:
-      - main
-
-  pull_request:
-    branches:
-      - main
-
+  merge_group:
   workflow_dispatch:
 
   schedule:
