GHA: Update workflow triggers (#2817)
Related to #2812.

--- a/.github/workflows/test_performance.yml
+++ b/.github/workflows/test_performance.yml
@@ -1,15 +1,6 @@
 name: Performance Test
 on:
-  push:
-    branches:
-      - develop
-      - master
-      - fix_perftest
-
-  pull_request:
-    branches:
-      - master
-
+  merge_group:
   workflow_dispatch:
 
   schedule:
