--- a/.github/workflows/test_python_ver_matrix.yml
+++ b/.github/workflows/test_python_ver_matrix.yml
@@ -2,13 +2,12 @@ name: Python Tests
 on:
   push:
     branches:
-      - develop
-      - master
+      - main
 
   pull_request:
     branches:
-      - master
   workflow_dispatch:
+  merge_group:
   schedule:
     - cron:  '48 4 * * *'
 
