GHA: develop -> main
Fix some missed references to the discontinued `develop` branch.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,4 @@ updates:
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-patch", "version-update:semver-minor"]
-    target-branch: "develop"
+    target-branch: "main"
