--- a/.github/workflows/test_valgrind.yml
+++ b/.github/workflows/test_valgrind.yml
@@ -36,7 +36,7 @@ jobs:
       if: github.event_name == 'schedule'
       uses: actions/checkout@v4
       with:
-        ref: develop
+        ref: main
 
     - name: Checkout code (manual, push, pull request)
       if: github.event_name != 'schedule'
