--- a/.github/actions/install-apt-dependencies/action.yml
+++ b/.github/actions/install-apt-dependencies/action.yml
@@ -11,7 +11,5 @@ runs:
               libboost-chrono-dev \
               libboost-math-dev \
               libboost-serialization-dev \
-              libhdf5-serial-dev \
-              libxml2-dev \
-              libxslt-dev
+              libhdf5-serial-dev
       shell: bash
