Install pkgconfig for nogil workflow

--- a/.github/actions/install-apt-dependencies/action.yml
+++ b/.github/actions/install-apt-dependencies/action.yml
@@ -12,6 +12,7 @@ runs:
               libboost-math-dev \
               libboost-serialization-dev \
               libhdf5-serial-dev \
+              pkg-config \
               libxml2-dev \
               libxslt1-dev
       shell: bash
