--- a/.github/workflows/test_python_nogil.yml
+++ b/.github/workflows/test_python_nogil.yml
@@ -31,7 +31,7 @@ jobs:
         python3 -m venv venv --clear
         source venv/bin/activate
         pip install --upgrade pip wheel
-        pip install numpy sympy cmake-build-extension==0.6.0 swig cython
+        pip install numpy sympy cmake-build-extension==0.6.0 swig cython pkgconfig
         AMICI_BUILD_TEMP="python/sdist/build/temp" \
           pip install --verbose -e python/sdist[test] --no-build-isolation
     - run: source venv/bin/activate && pip3 install "sympy>1.12"
