--- a/.github/workflows/test_python_nogil.yml
+++ b/.github/workflows/test_python_nogil.yml
@@ -47,7 +47,6 @@ jobs:
     - name: Python tests
       env:
         AMICI_NOGIL: "1"
-        PYTHON_GIL: "0"
       run: |
         source venv/bin/activate && \
-        pytest python/tests/test_nogil_parallel.py -vv
+        pytest python/tests/test_nogil.py -vv
