--- a/.github/workflows/test_python_nogil.yml
+++ b/.github/workflows/test_python_nogil.yml
@@ -35,18 +35,9 @@ jobs:
         AMICI_BUILD_TEMP="python/sdist/build/temp" \
           pip install --verbose -e python/sdist[test] --no-build-isolation
     - run: source venv/bin/activate && pip3 install "sympy>1.12"
-    - name: Get Pooch Cache Directory
-      id: get-pooch-cache
-      run: |
-        echo "pooch-cache=$(source venv/bin/activate && python -c 'import pooch; print(pooch.os_cache("pooch"))')" >> $GITHUB_ENV
-    - name: Cache Pooch Directory
-      uses: actions/cache@v4
-      with:
-        path: ${{ env.pooch-cache }}
-        key: ${{ runner.os }}-nogil-${{ github.job }}
     - name: Python tests
       env:
         AMICI_NOGIL: "1"
       run: |
         source venv/bin/activate && \
-        pytest python/tests/test_nogil.py -vv
+        pytest tests/test_nogil.py -vv
