Add Python nogil workflow (#2843)
* Use threads for nogil test

* Check equality across parallel simulations

* Update nogil workflow setup

* Update nogil workflow dependencies

* Install pkgconfig for nogil workflow

* Add nogil warning test and set PYTHON_GIL

* update test

* move test

* Update test_nogil.py

* Update test_nogil.py

* Update test_nogil.py

--- a/.github/actions/install-apt-dependencies/action.yml
+++ b/.github/actions/install-apt-dependencies/action.yml
@@ -11,5 +11,8 @@ runs:
               libboost-chrono-dev \
               libboost-math-dev \
               libboost-serialization-dev \
-              libhdf5-serial-dev
+              libhdf5-serial-dev \
+              pkg-config \
+              libxml2-dev \
+              libxslt1-dev
       shell: bash
