Support for scipy-openblas64 (#2772)
Simplify amici installation. Use the BLAS library from `scipy-openblas64` (https://github.com/MacPython/openblas-libs) that is also used by numpy and scipy. No need to pre-install BLAS libraries anymore.

* On macOS, Accelerate is used and scipy-openblas64 will not be installed.
* Elsewhere, users can opt out of using scipy-openblas64, by setting `AMICI_BLAS_USE_SCIPY_OPENBLAS=FALSE`. The package will be installed in the build environment anyways, but won't be used.


Closes #2736.

--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -6,6 +6,7 @@ requires = [
     "wheel",
     "numpy>=2.0",
     "cmake-build-extension==0.6.0",
+    "scipy-openblas64; platform_system!='Darwin'",
     "swig",
 ]
 build-backend = "setuptools.build_meta"
