--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -31,5 +31,6 @@ jobs:
       - name: Test import
         shell: bash -l {0}
         run: |
+          python -c "import os; import pprint; pprint.pprint(dict(os.environ))"
           python -c "from amici import _amici; print(_amici)"
           python -m amici
