--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install requirements
         shell: bash -l {0}
         run: |
-          conda install -c conda-forge compilers
+          conda install -c conda-forge compilers clang-tools
       - name: Install AMICI
         shell: bash -l {0}
         run: |
