--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "toposort",
     "setuptools>=48",
     "mpmath",
-    "swig"
+    "swig",
+    "xarray>=2025.01.0",
 ]
 license = "BSD-3-Clause"
 authors = [
