--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
     "wheel",
     "numpy>=2.0",
     "cmake-build-extension==0.6.0",
-    "scipy-openblas64; platform_system!='Darwin'",
+    "scipy-openblas64==0.3.30.0.1; platform_system!='Darwin'",
     "swig",
 ]
 build-backend = "setuptools.build_meta"
