--- a/tox.ini
+++ b/tox.ini
@@ -20,4 +20,4 @@ allowlist_externals =
     rm
 commands =
     rm -rf amici_models/ _doxyoutput_amici_cpp/ _exhale_cpp_api/ _exhale_matlab_api/
-    sphinx-build -T -E -W --keep-going -b readthedocs -d _build/doctrees-readthedocs -D language=en . _build/html
+    sphinx-build -T -E -W --keep-going -b html -d _build/doctrees-readthedocs -D language=en . _build/html
