GHA: Reduce workflow load
I think we can save some resources here and trigger some workflows less frequently.

--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -1,5 +1,7 @@
 name: Installation
-on: [push, pull_request, merge_group, workflow_dispatch]
+on:
+  merge_group:
+  workflow_dispatch:
 
 jobs:
   archive:
