--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -24,7 +24,6 @@ jobs:
         extract_subexpressions: ["true", "false"]
     env:
       AMICI_EXTRACT_CSE: ${{ matrix.extract_subexpressions }}
-
     steps:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
@@ -99,7 +98,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [ "3.12" ]
-        extract_subexpressions: ["true", "false"]
+        extract_subexpressions: ["false"]
     env:
       AMICI_EXTRACT_CSE: ${{ matrix.extract_subexpressions }}
     steps:
