Handle state-independent, parameter-dependent event triggers without root-finding
Since #2227, events that trigger at an explicit timepoint are handled without root-finding.
Events with state-independent but parameter-dependent triggers were still handled with root-finding.
With these changes, those event triggers will also be handled without root-finding.

Closes #2185.

--- a/models/model_dirac_py/CMakeLists.txt
+++ b/models/model_dirac_py/CMakeLists.txt
@@ -70,6 +70,7 @@ dxdotdp_explicit.h
 dxdotdx_explicit.cpp 
 dxdotdx_explicit.h 
 dydx.cpp 
+explicit_roots.cpp 
 h.h 
 model_dirac_py.cpp 
 model_dirac_py.h 
