--- a/pytest.ini
+++ b/pytest.ini
@@ -30,4 +30,4 @@ filterwarnings =
     ignore:jax.* is deprecated:DeprecationWarning
 
 
-norecursedirs = .git amici_models build doc documentation matlab models ThirdParty amici sdist examples
+norecursedirs = .git amici_models build doc documentation matlab models ThirdParty amici sdist examples *build*
