--- a/.github/workflows/test_petab_sciml.yml
+++ b/.github/workflows/test_petab_sciml.yml
@@ -34,6 +34,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 20
+          submodules: recursive
 
       - name: Install apt dependencies
         uses: ./.github/actions/install-apt-dependencies
@@ -67,7 +68,7 @@ jobs:
         run: |
           source ./venv/bin/activate \
             && python3 -m pip uninstall -y petab \
-            && python3 -m pip install git+https://github.com/petab-dev/libpetab-python.git@develop \
+            && python3 -m pip install git+https://github.com/petab-dev/libpetab-python.git@sciml \
 
       - name: Run PEtab SciML testsuite
         run: |
