--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 
-addopts = -vv --strict-markers
+addopts = -vv --strict-markers --doctest-modules
 
 filterwarnings =
     # warnings are errors
@@ -30,4 +30,4 @@ filterwarnings =
     ignore:jax.* is deprecated:DeprecationWarning
 
 
-norecursedirs = .git amici_models build doc documentation matlab models ThirdParty amici sdist examples *build*
+norecursedirs = .git amici_models build doc documentation models ThirdParty amici sdist examples *build* petab_test_problems pysb_test_models
