Test with Python 3.14

--- a/.github/workflows/test_python_ver_matrix.yml
+++ b/.github/workflows/test_python_ver_matrix.yml
@@ -25,6 +25,8 @@ jobs:
             experimental: false
           - python-version: '3.13'
             experimental: false
+          - python-version: '3.14'
+            experimental: false
 
     steps:
     - run: echo "AMICI_DIR=$(pwd)" >> $GITHUB_ENV
