--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -135,5 +135,5 @@ line-length = 79
 extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
-extend-select = ["B028", "UP"]
+extend-select = ["B028", "UP", "I"]
 ignore = ["E402", "F403", "F405", "E741"]
