Move fiddy-amici interface to amici
Fiddy (https://github.com/ICB-DCM/fiddy/), a package for finite difference methods, is used here for testing.
So far, the amici-fiddy interface code was in the fiddy repository. To resolve this cyclic dependency, let's move that interface code here.

Co-authored-by: Dilan Pathirana <59329744+dilpath@users.noreply.github.com>

--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -63,6 +63,7 @@ classifiers = [
 petab = ["petab>=0.4.0"]
 pysb = ["pysb>=1.13.1"]
 test = [
+    "fiddy>=0.0.3",
     "h5py!=3.15",
     "pytest",
     "pytest-cov",
