--- a/.gitignore
+++ b/.gitignore
@@ -141,8 +141,6 @@ tests/sbml/sbml-test-suite/
 */sbml-semantic-test-cases/*
 tests/sbml/SBMLTestModels/
 tests/benchmark_models/test_bmc
-tests/petab_test_suite
-petab_test_suite
 */tests/BIOMD0000000529/*
 
 python/examples/example_steadystate/model_steadystate_scaled/*
@@ -200,3 +198,4 @@ tests/benchmark_models/cache_fiddy/*
 venv/*
 .coverage
 tests/sciml/models/*
+amici_models
