Support for PEtab SciML in jax (#2614)
* add jax serialisation

* doc

* no compilation for jax

* bad ruff

* Update ExampleJaxPEtab.ipynb

* bad ruff

* Update ExampleJaxPEtab.ipynb

* add nan safe log&divide

* some net cases and first ude testcase passing

* some more passing ude test

* updates

* fix merge

* remove changes doc

* update net_004_alt test

* refactor to pytests

* fixup merge

* fix net test-cases

* fixes & remove sciml dependency

* fixup, add initial condition support

* Update petab.py

* Update test_petab_sciml.yml

* Update petab.py

* Update petab.py

* Update petab.py

* Update ExampleJaxPEtab.ipynb

* ignore test warning

* Update test_petab_sciml.yml

* add hybridisation support

* fix workflow

* update testsuite

* update after test refactor

* fix hybridization

* update testsuite

* update testsuite, some fixes

* Update testsuite

* fix #2687

* spec updates

* updates for overhauled testsuite

* Update nn.py

* Update petab_import.py

* Getting test_net petab-sciml tests to pass
- update sciml testsuite submodule to point at main
- fix a eqx LayerNorm deprecation warning
- fix string formatting of bool in kwarg
- updates to test code driven by updated sciml format

* Implementing features for a subset of ude petab_sciml test cases. Excludes:
- frozen nn layers
- nns in observable formulae

* update petab_sciml workflow - on branches and sciml install branch

* updates to petab sciml workflow

* fix undef local var in jax tests

* frozen layers for RHS networks

generalise frozen layers to networks across system

Use stop_grad instead

* implement nns in the observable formula

* tidy, refactor, generalise sciml test case implementations

* hybridization df in _petab_problem - makes JAXProblem jit-able

* update frozen layer/arrays implementation

* update jax petab notebook

* add h5py to docs deps

* fix sbml jax tests

* missed rebased imports

* codecov maybe

* codecov - update cov file name

* codecov - specify cov path

* 

--- a/python/sdist/pyproject.toml
+++ b/python/sdist/pyproject.toml
@@ -88,13 +88,15 @@ examples = [
     "scipy",
 ]
 jax = [
-    "jax>=0.4.36",
-    "jaxlib>=0.4.36",
+    "jax>=0.7.2",
     "diffrax>=0.7.0",
     "jaxtyping>=0.2.34",
-    "equinox>=0.11.10",
+    "equinox>=0.13.2",
     "optimistix>=0.0.9",
-    "interpax>=0.3.3,<=0.3.6",
+    "interpax>=0.3.9",
+]
+sciml = [
+    "h5py"
 ]
 
 [project.scripts]
