GHA: Run workflows on pushes to `release*` branches
Run workflows on pushes to `release*` branches.

--- a/.github/workflows/test_sbml_semantic_test_suite_jax.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite_jax.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - 'release*'
   pull_request:
     paths:
       - .github/workflows/test_sbml_semantic_test_suite_jax.yml
