--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -28,6 +28,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda install -c conda-forge compilers clang-tools
+          ls -1 /Users/runner/miniconda3/envs/amici/bin
       - name: Install AMICI
         shell: bash -l {0}
         run: |
