--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install requirements
         shell: bash -l {0}
         run: |
-          conda install -c conda-forge cmake ninja -compilers clang-tools
+          conda install -c conda-forge cmake ninja compilers
           export CMAKE_PREFIX_PATH="$CONDA_PREFIX"
           ls -1 /Users/runner/miniconda3/envs/amici/bin
       - name: Install AMICI
