--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, macos-latest]
-        python-version: ['3.11']
+        python-version: ['3.11', '3.12', '3.13']
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -27,7 +27,7 @@ jobs:
       - name: Install requirements
         shell: bash -l {0}
         run: |
-          conda install -c conda-forge cmake ninja compilers
+          conda install -c conda-forge compilers clang-tools
           export CMAKE_PREFIX_PATH="$CONDA_PREFIX"
           ls -1 /Users/runner/miniconda3/envs/amici/bin
       - name: Install AMICI
