--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           conda install -c conda-forge compilers clang-tools
           export CMAKE_PREFIX_PATH="$CONDA_PREFIX"
+          export CC=$(which clang)
+          export CXX=$(which clang++)
           which cmake clang clang++ clang-scan-deps
           clang --version
           clang-scan-deps --version
