--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, macos-latest]
-        python-version: ['3.11', '3.12', '3.13']
+        python-version: ['3.13']
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
       - name: Install AMICI
         shell: bash -l {0}
         run: |
-          pip install -v git+https://github.com/AMICI-dev/amici.git@main#egg=amici\&subdirectory=python/sdist
+          pip3 install -v --user ./python/sdist
       - name: Test import
         shell: bash -l {0}
         run: |
