--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -27,14 +27,7 @@ jobs:
       - name: Install requirements
         shell: bash -l {0}
         run: |
-          conda install -c conda-forge cmake compilers clang-tools
-          export CMAKE_PREFIX_PATH="$CONDA_PREFIX"
-          export CC=$(which clang)
-          export CXX=$(which clang++)
-          export SCAN=$(which clang-scan-deps)
-          which cmake clang clang++ clang-scan-deps
-          clang --version
-          clang-scan-deps --version
+          conda install -c conda-forge compilers
       - name: Install AMICI
         shell: bash -l {0}
         run: |
