--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -36,7 +36,7 @@ jobs:
         shell: bash -l {0}
         run: |
           # Install test extras (pytest, scipy, etc.)
-          pip3 install --user pytest pytest-cov scipy h5py
+          pip3 install --user pytest pytest-cov scipy h5py antimony
       - name: Test import
         shell: bash -l {0}
         run: |
