--- a/.github/workflows/test_conda_install.yml
+++ b/.github/workflows/test_conda_install.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Install AMICI
         shell: bash -l {0}
         run: |
+          echo $PATH
           pip3 install -v --user ./python/sdist
       - name: Install test dependencies
         shell: bash -l {0}
@@ -46,5 +47,6 @@ jobs:
       - name: Run SBML import test
         shell: bash -l {0}
         run: |
+          echo $PATH
           cd python/tests
           pytest test_sbml_import.py::test_steadystate_simulation -v
