Remove mathml2sympy
For spline handling, replace `mathml2sympy` by sbmlmath functions.
Related to #2146.

Also fix potential code printing issues resulting in unintended integer division specifically for splines.

--- a/pytest.ini
+++ b/pytest.ini
@@ -28,6 +28,7 @@ filterwarnings =
     ignore:divide by zero encountered in log:RuntimeWarning
     # ignore jax deprecation warnings
     ignore:jax.* is deprecated:DeprecationWarning
-
+    # swig 4.3 issues
+    ignore:builtin type .* has no __module__ attribute:DeprecationWarning
 
 norecursedirs = .git amici_models build doc documentation models ThirdParty amici sdist examples *build* petab_test_problems pysb_test_models
